crates/valen-parser/tests/snapshots/lexer__int_underscore_separator.snap
---
source: crates/valen-parser/tests/lexer.rs
expression: "fmt(\"fn main() { let x = 1_000_000; }\")"
---
Fn @ 0..2
Ident("main") @ 3..7
LParen @ 7..8
RParen @ 8..9
LBrace @ 10..11
Let @ 12..15
Ident("x") @ 16..17
Eq @ 18..19
IntLit(1000000) @ 20..29
Semi @ 29..30
RBrace @ 31..32
