crates/valen-parser/tests/snapshots/lexer__let_with_binop.snap
---
source: crates/valen-parser/tests/lexer.rs
expression: "fmt(\"fn main() { let x = 1 + 2; x }\")"
---
Fn @ 0..2
Ident("main") @ 3..7
LParen @ 7..8
RParen @ 8..9
LBrace @ 10..11
Let @ 12..15
Ident("x") @ 16..17
Eq @ 18..19
IntLit(1) @ 20..21
Plus @ 22..23
IntLit(2) @ 24..25
Semi @ 25..26
Ident("x") @ 27..28
RBrace @ 29..30
