crates/valen-parser/tests/snapshots/lexer__long_literal.snap
---
source: crates/valen-parser/tests/lexer.rs
expression: "fmt(\"fn main() { let x = 42L; }\")"
---
Fn @ 0..2
Ident("main") @ 3..7
LParen @ 7..8
RParen @ 8..9
LBrace @ 10..11
Let @ 12..15
Ident("x") @ 16..17
Eq @ 18..19
LongLit(42) @ 20..23
Semi @ 23..24
RBrace @ 25..26
